# simplercu

./: README.md  meson.build  meson.options
src/: main.c  rcu.c  rcu.h  rcu_internal.h
